# viBERT-base

./: .gitignore  README.md  pyproject.toml
benchmark/: hatespeech_vihsd.py  ner_phoner.py  nli_vinli.py  requirements.txt  run_all_benchmarks.sh  sentiment_vsfc.py  text_classification_vsmec.py
mai-roberta-base/: README.md  config.json  tokenizer.json  tokenizer_config.json  vocab.txt
