[project]
name = "mai-roberta-base"
version = "1.0.0"
description = "Vietnamese RoBERTa model pre-trained on CC-100 Vietnamese and custom corpus"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mai Nguyen"}
]
keywords = ["nlp", "vietnamese", "roberta", "bert", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "evaluate>=0.4.0",
    "seqeval>=1.2.2",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "accelerate>=0.21.0",
    "huggingface-hub>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[project.urls]
Homepage = "https://huggingface.co/mainguyen9/mai-roberta-base"
Repository = "https://github.com/mainguyen9/mai-roberta-base"

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]
